# the-house

./: CHANGELOG.md  Dockerfile  README.md  lefthook.yml  pyproject.toml
.github/workflows/: bump.yml  docker-publish.yml  publish.yml  release.yml
tests/: test_monster.py  test_player.py
thehouse/: __init__.py
